<resources>
    <string name="app_name">Book App</string>
    <string name="logo">Logo</string>
    <string name="book_app">Book App</string>
    <string name="add_category">+ Add Category</string>
    <string name="add_pdf">Add Pdf</string>
    <string name="new_category">New Category</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="category_name">Category Name</string>
    <string name="add_a_new_book">Add a New Book</string>
    <string name="update_book">Update Book</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="category">Category</string>
    <string name="size">Size</string>
    <string name="time">Time</string>
    <string name="books">Books</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="book_details">Book Details</string>
    <string name="back">Back</string>
    <string name="n_a">N/A</string>
    <string name="date">Date</string>
    <string name="the_description_of_the_book">The description of the book:</string>
    <string name="read_book">Read Book</string>
    <string name="page">Page</string>
    <string name="more">More</string>
    <string name="n_n">N/N</string>
    <string name="profile">Profile</string>
    <string name="please_login">Please Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="new_user">New User ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="account">Account</string>
    <string name="member">Member</string>
    <string name="favourite_books">Favourite Books</string>
    <string name="favourite">Favourite</string>
    <string name="created_at">Created At</string>
    <string name="create_new_account">Create New Account</string>
    <string name="welcome_to_book_app">Welcome to Book App</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="categories">Categories</string>
    <string name="empty">Empty</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_category_is_empty">Your Category is Empty!!!</string>
    <string name="your_book_is_empty">Your Book is Empty!!!</string>
    <string name="your_favourite_book_are_empty">Your Favourite Book are Empty!!!</string>
    <string name="your_books_is_empty">Your Books is Empty!!!</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="use_password_to_login">Use Password to Login</string>
    <string name="continue_with_sign_up">Continue with Sign Up</string>
    <string name="description">Description</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="logout_conformation">Logout Conformation</string>
    <string name="toast">Toast</string>
    <string name="toast_icon">Toast Icon</string>
    <string name="please_reconnect_the_network">Please reconnect the network</string>
    <string name="image">Image</string>
    <string name="close">Close</string>
    <string name="pdf">PDF</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="restore">Restore</string>
    <string name="your_recycle_bin_is_empty">Your Recycle Bin is Empty!!!</string>
</resources>