<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".ui.register.RegisterFragment">


    <LinearLayout
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textStyle="bold"
            android:textSize="30sp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_below="@id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        android:layout_marginVertical="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="@string/email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_below="@id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword2"
        android:layout_below="@id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/black"
        app:boxStrokeColor="@color/black"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword2"
        android:layout_marginTop="5dp"
        android:text="@string/register"
        android:backgroundTint="@color/black"
        app:cornerRadius="5dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/gray"/>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in" />
    </LinearLayout>

</RelativeLayout>