<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.book.BookFragment">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/category"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvCategoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvTitle"/>
    </RelativeLayout>

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlTop"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/search_view_background"
        android:queryHint="@string/search"
        android:iconifiedByDefault="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:padding="16dp" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_books_is_empty"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textSize="24sp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true" />

</RelativeLayout>