<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvBook"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="15dp"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="5dp"
    app:contentPadding="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background2"
        android:padding="5dp">

        <RelativeLayout
            android:id="@+id/rlPdf"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/pdfView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/book_title"
            android:textColor="@color/black"
            android:layout_toStartOf="@id/ibFavourite"
            android:layout_toEndOf="@id/rlPdf"
            android:ellipsize="end"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tvDesc"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_description"
            android:textColor="@color/black"
            android:layout_below="@id/tvTitle"
            android:layout_toEndOf="@id/rlPdf"
            android:ellipsize="end"
            android:maxLines="3"/>

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/category"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:layout_marginBottom="2dp"
            android:layout_toEndOf="@id/rlPdf"
            android:layout_above="@id/tvSize"/>

        <TextView
            android:id="@+id/tvPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/page"
            android:textColor="@color/black"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/size"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/rlPdf"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Caption"
            android:text="@string/time"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_toEndOf="@id/tvSize"
            android:layout_toStartOf="@id/tvPage"
            android:layout_alignParentBottom="true"
            android:maxLines="1"/>

        <ImageButton
            android:id="@+id/ibFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_favorite"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/favourite" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>