<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    tools:context=".ui.pdf.BaseAddEditPdfFragment">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ibBack"
            android:contentDescription="@string/logo" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/ivLogo"
            android:text="@string/add_a_new_book"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/ibAttach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_attach"
            android:contentDescription="@string/pdf" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlTop"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_category">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/book_category"
                android:inputType="none"
                android:padding="16dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTitle"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_pdf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/book_title"
                android:textColorHighlight="@color/white"
                android:theme="@style/TextViewBlackHandler" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDesc"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_pdf">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:hint="@string/book_description"
                android:minLines="8"
                android:textColorHighlight="@color/white"
                android:theme="@style/TextViewBlackHandler" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="25dp"
        android:layout_alignParentBottom="true"
        app:cornerRadius="5dp"/>

</RelativeLayout>