<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageButton
            android:id="@+id/ibProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/profile" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:text="@string/book_app"
            android:layout_centerInParent="true"/>

        <ImageButton
            android:id="@+id/ibFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_folder"
            android:contentDescription="@string/profile" />
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTop"
        android:paddingHorizontal="8dp"
        android:layout_above="@id/llBottom"/>

    <LinearLayout
        android:id="@+id/llBook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_below="@id/rlTop"
        android:layout_above="@id/llBottom">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/search_view_background"
            android:queryHint="@string/search"
            android:iconifiedByDefault="false"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="16dp"
            android:paddingTop="8dp"/>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:textSize="24sp"/>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="5dp"
        android:paddingHorizontal="5dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCategory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            app:backgroundTint="@null"
            android:background="@drawable/gradient_background3"
            android:text="@string/add_category"
            android:textColor="@color/black"
            app:cornerRadius="5dp"/>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPDF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pdf"
            android:layout_margin="4dp"
            android:contentDescription="@string/add_pdf" />
    </LinearLayout>


</RelativeLayout>