<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pdf.PdfDetailsFragment">

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/read_book"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/tvPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_n"
            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tvTitle"/>
    </RelativeLayout>

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdfView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTop"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>